Upgrade to Java 11 / Metreeca/Base 1.0.2